# tempo

./: .gitignore  Cargo.toml  Cross.toml  Justfile  TEST_README.md  audit_diff_summary.md  bench.nu  deny.toml  docker-bake.hcl  greptile.json  metrics_main.json  reth_bench_compare.py  strip_colors_from_log.py  switch_reth.sh  test_reth_bench_compare.py  typos.toml
.cargo/: config.toml
.changelog/: fix-download-chain-url.md  plain-sheep-meow.md  tidy-snails-cry.md  warm-pigs-bow.md
.github/: CODEOWNERS
.github/workflows/: build.yml  docker-profiling.yml  docker.yml  docs-specs.yml  docs.yml  label-pr.yml  lint.yml  release.yml  specs.yml  test.yml  tip-number-validate.yml  tip-number.yml
app/src/: main.rs
contracts/bridge/test/: Bridge.t.sol
contrib/infra/ansible/: .gitignore  requirements.yml
contrib/infra/kubernetes/: README.md
contrib/infra/terraform/: root.hcl
crates/alloy/examples/: batch_payments.rs  burn_tokens.rs  get_balance.rs  mint_fee_liquidity.rs  mint_tokens.rs  transfer.rs  transfer_with_memo.rs  watch_transfers.rs  watch_transfers_with_memo.rs
crates/bridge-exex/src/: digest_parity_test.rs  exex.rs  lib.rs  metrics.rs  signer.rs  tempo_client.rs
crates/chainspec/src/: hardfork.rs  spec.rs
crates/commonware-node/: Cargo.toml
crates/commonware-node-config/: Cargo.toml
crates/commonware-node-config/src/: config.rs  lib.rs  tests.rs
crates/commonware-node-cryptography/: Cargo.toml
crates/commonware-node-cryptography/src/: lib.rs
crates/commonware-node/src/: alias.rs  args.rs  cli.rs  config.rs  lib.rs  metrics.rs  reth_glue.rs  subblocks.rs  validators.rs
crates/commonware-node/src/cli/: mod.rs
crates/commonware-node/src/cli/consensus_db/: mod.rs  stats.rs
crates/commonware-node/src/consensus/: block.rs  digest.rs  engine.rs  execution_driver.rs  mod.rs  supervisor.rs
crates/commonware-node/src/consensus/application/: actor.rs  core.rs  executor.rs  mod.rs
crates/commonware-node/src/consensus/execution_driver/: engine.rs  mod.rs
crates/commonware-node/src/dkg/ceremony/: mod.rs  payload.rs  persisted.rs  tree.rs
crates/commonware-node/src/dkg/manager/: actor.rs  export.rs  mod.rs  validators.rs
crates/commonware-node/src/dkg/manager/actor/: mod.rs  post_allegretto.rs  pre_allegretto.rs
crates/commonware-node/src/epoch/: mod.rs
crates/commonware-node/src/epoch/manager/: actor.rs  ingress.rs  mod.rs
crates/commonware-node/src/feed/: state.rs
crates/commonware-node/src/peer_manager/: actor.rs
crates/consensus/: Cargo.toml
crates/consensus-args/src/: lib.rs
crates/consensus-indexer/src/: indexer.rs  lib.rs  store.rs
crates/consensus/src/: lib.rs
crates/contracts/: Cargo.toml
crates/e2e/: Cargo.toml
crates/e2e-tests/: Cargo.toml
crates/e2e-tests/src/: node.rs  utils.rs
crates/e2e-tests/tests/: basic.rs
crates/e2e/src/: execution_runtime.rs  lib.rs
crates/evm/src/: block.rs  evm.rs  lib.rs
crates/execution-tests/: README.md
crates/execution-tests/src/: database.rs  executor.rs  fingerprint.rs  lib.rs  state_capture.rs  vector.rs
crates/eyre/: Cargo.toml
crates/faucet/: Cargo.toml
crates/faucet/src/: faucet.rs
crates/native-bridge/: AGENTS.md  Cargo.toml
crates/native-bridge/contracts/: foundry.toml
crates/native-bridge/src/: eip2537.rs  signer.rs
crates/native-bridge/tests/: bls_fuzz.rs  bridge_e2e.rs  finalization_bridge_e2e.rs
crates/node/: Cargo.toml
crates/node/src/: lib.rs  node.rs
crates/payload/builder/: Cargo.toml
crates/precompile-tests/: README.md
crates/precompile-tests/src/: main.rs
crates/precompiles/: Cargo.toml
crates/precompiles-macros/src/: composition.rs  dispatcher.rs  events.rs  layout.rs  lib.rs  packing.rs  storable.rs  storable_primitives.rs  storable_tests.rs  traits.rs  utils.rs
crates/precompiles-macros/tests/: eip712.rs  events.rs  interface.rs  layout.proptest-regressions  layout.rs  macro_tests.rs  minimal.rs  storable.rs  storage.rs
crates/precompiles/benches/: tempo_precompiles.rs
crates/precompiles/src/: dispatch.rs  error.rs  lib.rs  test_util.rs  utils.rs
crates/primitives/: Cargo.toml
crates/revm/: Cargo.toml
crates/rpc/: Cargo.toml
crates/sequential-futures-queue/: Cargo.toml
crates/sequential-futures-queue/src/: lib.rs
crates/storage-layout-tests/: Cargo.toml
crates/storage-layout-tests/src/: lib.rs
crates/storage-layout-tests/testdata/: arrays.layout.json  arrays.sol  basic_types.layout.json  basic_types.sol  double_mappings.layout.json  double_mappings.sol  dynamic_arrays.layout.json  dynamic_arrays.sol  mappings.layout.json  mappings.sol  mixed_slots.layout.json  mixed_slots.sol  structs.layout.json  structs.sol
crates/storage-layout-tests/tests/: layout_verification.rs
crates/transaction-pool/: Cargo.toml
docs/: .gitignore  README.md  auto-imports.d.ts  malachite-reth-interactions.md  package.json  solidity-macro-redesign-progress.md  solidity-macro-redesign.md  vocs.config.tsx
docs/components/: AnimatedDiagram.tsx  ConnectWallet.tsx
docs/internal/: local-benchmarking.md
docs/pages/: index.mdx
docs/scripts/: gen:sdk-docs.ts  generate-seo-metadata.ts  vite-plugin-og-image.ts
docs/snippets/: tempo-tx-properties.mdx
docs/specs/: TIP-DEX-MIN-ORDER.md  foundry.toml
python_analysis/scripts/: bench_and_kill.py  bench_and_kill.sh  reth_bench_compare.py
reth-bench-compare/scripts/: analyze_logs.py  bench_and_kill.sh
scripts/: multiproof_chunking_analysis.py
specs/docs/: fees.mdx
src/app/: mod.rs  state.rs
src/cli/: mod.rs
src/consensus/: node.rs
testnet/: README.md  spawn.sh
testnet/scripts/: e2e_test.sh
tips/: README.md  tip-1004.md  tip-1010.md  tip-1011.md  tip-1013.md  tip-1015.md  tip-1016.md  tip-1017.md  tip-1018.md  tip-1019.md  tip-1020.md  tip-XXXX.md  tip-xxxx.md  tip-yyyy.md  tip-zzzz.md
tips/bridge/: 01-message-bridge.md  02-message-format.md  03-sidecar.md  04-token-bridge.md  README.md
tips/ref-impls/: foundry.toml
xtask/: Cargo.toml
xtask/src/: generate_devnet.rs  generate_genesis.rs  genesis.rs  genesis_args.rs  inspect_block.rs  main.rs  replay_dkg.rs
(+826 files in other folders)
