[workspace]
resolver = "3"
members = ["app", "library"]

# [patch.crates-io]
# hickory-resolver = { version = "0.25.0-alpha5" }

[workspace.dependencies]
anyhow = "1.0.98"
tokio = { version = "1.45.1", features = ["full"] }
serde_json = "1.0.140"
eyre = "0.6.12"
serde = {version = "1.0.219", features = ["derive"]}
rand = "0.9.1"

# Reth dependencies
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", branch = "main", package = "reth-node-builder" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", branch = "main", package = "reth-tasks" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", branch = "main", package = "reth-chainspec" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", branch = "main", package = "reth-ethereum-primitives" }
reth-consensus= { git = "https://github.com/paradigmxyz/reth", branch = "main", package = "reth-consensus" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", branch = "main", package = "reth-ethereum" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", branch = "main", package = "reth-primitives" }

# Alloy dependencies
alloy = { version = "1.0.9", default-features = false }

# Malachite dependencies
malachite-core-types = { git = "https://github.com/informalsystems/malachite", branch = "main", package = "informalsystems-malachitebft-core-types" }
malachitebft-app-channel = { git = "https://github.com/informalsystems/malachite", branch = "main", package = "informalsystems-malachitebft-app-channel" }
malachitebft-proto = { git = "https://github.com/informalsystems/malachite", branch = "main", package = "informalsystems-malachitebft-proto" }
