[package]
name = "tempo-commonware-node-cryptography"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true

bytes.workspace = true

commonware-codec.workspace = true 
commonware-cryptography.workspace = true 
commonware-utils.workspace = true 

rand.workspace = true
