[package]
name = "sequential-futures-queue"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
futures-util = "0.3.31"
pin-project-lite = "0.2.16"

[dev-dependencies]
futures-channel = "0.3.31"
futures-executor = "0.3.31"
futures-test = "0.3.31"
