[package]
name = "storage-layout-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
alloy = "1.0.41"
alloy-primitives = "1.4.1"
tempo-precompiles-macros = { path = "../precompiles-macros" }
tempo-precompiles = { path = "../precompiles" }

[dev-dependencies]
